--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-background">
-            <img src="assets/images/parkhouse_night.jpg" alt="Parkhouse bei Nacht" class="hero-image">
+            <img src="parkhouse_night.jpg" alt="Parkhouse bei Nacht" class="hero-image">
             <div class="hero-overlay"></div>
         </div>
         <div class="hero-content">
@@ -68,7 +68,7 @@
             <div class="events-grid">
                 <div class="event-card featured">
                     <div class="event-image">
-                        <img src="assets/images/female_dj.jpg" alt="Only Woman Special">
+                        <img src="female_dj.jpg" alt="Only Woman Special">
                         <div class="event-overlay">
                             <div class="event-badge">SPECIAL EVENT</div>
                         </div>
@@ -99,7 +99,7 @@
 
                 <div class="event-card">
                     <div class="event-image">
-                        <img src="assets/images/dnb_crowd.jpg" alt="Regular Event">
+                        <img src="dnb_crowd.jpg" alt="Regular Event">
                     </div>
                     <div class="event-content">
                         <div class="event-date-display">
@@ -158,11 +158,11 @@
                 </div>
                 <div class="location-gallery">
                     <div class="gallery-main">
-                        <img src="assets/images/parkhouse_event.jpg" alt="Parkhouse Event" class="gallery-image">
+                        <img src="parkhouse_event.jpg" alt="Parkhouse Event" class="gallery-image">
                     </div>
                     <div class="gallery-thumbs">
-                        <img src="assets/images/parkhouse_night.jpg" alt="Parkhouse Night" class="thumb active">
-                        <img src="assets/images/parkhouse_event.jpg" alt="Parkhouse Event" class="thumb">
+                        <img src="parkhouse_night.jpg" alt="Parkhouse Night" class="thumb active">
+                        <img src="parkhouse_event.jpg" alt="Parkhouse Event" class="thumb">
                     </div>
                 </div>
             </div>
