--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div class="event-details">
                             <div class="detail">
                                 <span class="label">Zeit:</span>
-                                <span class="value">22:00 - 04:00</span>
+                                <span class="value">22:00 - 02:00</span>
                             </div>
                             <div class="detail">
                                 <span class="label">Location:</span>
@@ -103,16 +103,16 @@
                     </div>
                     <div class="event-content">
                         <div class="event-date-display">
-                            <span class="day">08</span>
-                            <span class="month">AUG</span>
-                            <span class="year">2025</span>
+                            <span class="day"></span>
+                            <span class="month"></span>
+                            <span class="year"></span>
                         </div>
                         <h3 class="event-title">SUMMER BASS</h3>
                         <p class="event-description">Heavy Basslines unter dem Sternenhimmel im Stadtpark</p>
                         <div class="event-details">
                             <div class="detail">
                                 <span class="label">Zeit:</span>
-                                <span class="value">21:00 - 03:00</span>
+                                <span class="value">-</span>
                             </div>
                             <div class="detail">
                                 <span class="label">Artists:</span>
@@ -197,11 +197,11 @@
                         <div class="stat-label">Events</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">100+</div>
+                        <div class="stat-number">10+</div>
                         <div class="stat-label">Artists</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">5000+</div>
+                        <div class="stat-number">250+</div>
                         <div class="stat-label">Besucher</div>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                     <h3>Newsletter</h3>
                     <p>Verpasse keine Events und erhalte exklusive Presale-Tickets</p>
                     <form class="newsletter-form">
-                        <input type="email" placeholder="Deine E-Mail Adresse" required>
+                        <input type="email" placeholder="parkandbass@gmail.com" required>
                         <button type="submit" class="submit-button">
                             <span>ANMELDEN</span>
                         </button>
