--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <button class="event-button">
-                            <span><a href="instagram.com/parkandbass">MEHR INFO</a></span>
+                            <span>MEHR INFO</span>
                         </button>
                     </div>
                 </div>
