--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <span class="year">2025</span>
                         </div>
                         <h3 class="event-title">ONLY WOMAN SPECIAL</h3>
-                        <p class="event-description">Ein besonderer Abend mit den besten weiblichen DJs der Drum & Bass Szene</p>
+                        <p class="event-description">Ein besonderer Abend mit den neuesten weiblichen DJs der Drum & Bass Szene</p>
                         <div class="event-details">
                             <div class="detail">
                                 <span class="label">Zeit:</span>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
-                        <div class="stat-number">50+</div>
+                        <div class="stat-number">3+</div>
                         <div class="stat-label">Events</div>
                     </div>
                     <div class="stat-item">
