--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </h1>
             <p class="hero-subtitle">Drum & Bass im Grazer Stadtpark</p>
             <div class="next-event">
-                <div class="event-date">11.07.2025</div>
-                <div class="event-special">ONLY WOMAN SPECIAL</div>
+                <div class="event-date">06.09.2025</div>
+                <div class="event-special">ONLY B2B SPECIAL</div>
             </div>
             <a href="#events" class="cta-button">
                 <span>TICKETS</span>
@@ -68,7 +68,7 @@
             <div class="events-grid">
                 <div class="event-card featured">
                     <div class="event-image">
-                        <img src="female_dj.jpg" alt="Only Woman Special">
+                        <img src="audio-720589_1920.jpg" alt="Only B2B Special">
                         <div class="event-overlay">
                             <div class="event-badge">SPECIAL EVENT</div>
                         </div>
@@ -80,7 +80,7 @@
                             <span class="year">2025</span>
                         </div>
                         <h3 class="event-title">ONLY WOMAN SPECIAL</h3>
-                        <p class="event-description">Ein besonderer Abend mit den neuesten weiblichen DJs der Drum & Bass Szene</p>
+                        <p class="event-description">Ein besonderer Abend mit besonderen B2B Sets mit DJs der Drum & Bass Szene</p>
                         <div class="event-details">
                             <div class="detail">
                                 <span class="label">Zeit:</span>
