--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                     </div>
                     <div class="event-content">
                         <div class="event-date-display">
-                            <span class="day">11</span>
-                            <span class="month">JUL</span>
+                            <span class="day">06</span>
+                            <span class="month">SEP</span>
                             <span class="year">2025</span>
                         </div>
-                        <h3 class="event-title">ONLY WOMAN SPECIAL</h3>
+                        <h3 class="event-title">ONLY B2B SPECIAL</h3>
                         <p class="event-description">Ein besonderer Abend mit besonderen B2B Sets mit DJs der Drum & Bass Szene</p>
                         <div class="event-details">
                             <div class="detail">
