--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </h1>
             <p class="hero-subtitle">Drum & Bass im Grazer Stadtpark</p>
             <div class="next-event">
-                <div class="event-date">06.09.2025</div>
-                <div class="event-special">ONLY B2B SPECIAL</div>
+                <div class="event-date">25.10.2025</div>
+                <div class="event-special">Quality Night</div>
             </div>
             <a href="#events" class="cta-button">
                 <span>TICKETS</span>
@@ -193,15 +193,15 @@
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
-                        <div class="stat-number">3+</div>
+                        <div class="stat-number">4+</div>
                         <div class="stat-label">Events</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">10+</div>
+                        <div class="stat-number">20+</div>
                         <div class="stat-label">Artists</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">350+</div>
+                        <div class="stat-number">500+</div>
                         <div class="stat-label">Besucher</div>
                     </div>
                 </div>
