--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                     </div>
                     <div class="event-content">
                         <div class="event-date-display">
-                            <span class="day">06</span>
-                            <span class="month">SEP</span>
+                            <span class="day">25</span>
+                            <span class="month">OKT</span>
                             <span class="year">2025</span>
                         </div>
-                        <h3 class="event-title">ONLY B2B SPECIAL</h3>
-                        <p class="event-description">Ein besonderer Abend mit besonderen B2B Sets mit DJs der Drum & Bass Szene</p>
+                        <h3 class="event-title">QUALITY NIGHT</h3>
+                        <p class="event-description">Ein besonderer Abend mit besonderen hochqualitativen DJs und Produzenten der Drum & Bass Szene</p>
                         <div class="event-details">
                             <div class="detail">
                                 <span class="label">Zeit:</span>
